executable(
	meson.project_name(),
	
	'cache.vala',
	'downloader.vala',
	'dragonstoneApp.vala',
	'external.vala',
	'main.vala',
	'request.vala',
	'resource.vala',
	'resourceStore.vala',
	'session.vala',
	'settings.vala',
	'util/connectionHelper.vala',
	'util/defaultGtkLinkIconLoader.vala',
	'util/flaglist.vala',
	'util/intparser.vala',
	'util/messageViewFactory.vala',
	'util/resourceFileHelper.vala',
	'util/stack.vala',
	'util/tlsCertificateGenerator.vala',
	'util/uri.vala',
	'registries/bookmarkRegistry.vala',
	'registries/gopher.vala',
	'registries/mimeguesser.vala',
	'registries/sessionRegistry.vala',
	'registries/settingsRegistry.vala',
	'registries/storeRegistry.vala',
	'registries/superRegistry.vala',
	'registries/translation.vala',
	'registries/uriAutocorrect.vala',
	'registries/viewRegistry.vala',
	'sessions/default.vala',
	'sessions/dummy.vala',
	'sessions/tls.vala',
	'sessions/uncached.vala',
	'settings/bookmarkSettingsBridge.vala',
	'settings/fileSettingsProvider.vala',
	'settings/kvSettingsBridge.vala',
	'settings/ramSettingsProvider.vala',
	'stores/about.vala',
	'stores/cache.vala',
	'stores/file.vala',
	'stores/finger.vala',
	'stores/gemini.vala',
	'stores/gopher.vala',
	'stores/switch.vala',
	'stores/test.vala',
	'startup/about.backend.vala',
	'startup/bookmarks.backend.vala',
	'startup/bookmarks.gtk.vala',
	'startup/bookmarks.settings.vala',
	'startup/cache.backend.vala',
	'startup/cache.gtk.vala',
	'startup/file.backend.vala',
	'startup/file.gtk.vala',
	'startup/finger.backend.vala',
	'startup/frontend.settings.vala',
	'startup/gemini.backend.vala',
	'startup/gemini.gtk.vala',
	'startup/gopher.backend.vala',
	'startup/gopher.gtk.vala',
	'startup/localization.vala',
	'startup/localization.english.vala',
	'startup/sessions.backend.vala',
	'startup/sessions.gtk.vala',
	'startup/settings.backend.vala',
	'startup/store_switch.vala',
	'startup/utiltest.backend.vala',
	'startup/utiltest.gtk.vala',
	'widgets/bookmarkAdder.vala',
	'widgets/bookmarkEditor.vala',
	'widgets/cacheview.vala',
	'widgets/menuEntrys.vala',
	'widgets/window.vala',
	'widgets/headerBar.vala',
	'widgets/hyperTextContent.vala',
	'widgets/sessionChooser.vala',
	'widgets/subviewBase.vala',
	'widgets/tab.vala',
	'widgets/tabHead.vala',
	'widgets/view.vala',
	'widgets/viewChooser.vala',
	'widgets/textContent.vala',
	'widgets/textEntry.vala',
	'widgets/linkButton.vala',
	'widgets/linkPopover.vala',
	'widgets/views/bookmarks.vala',
	'widgets/views/cache.vala',
	'widgets/views/directory.vala',
	'widgets/views/download.vala',
	'widgets/views/plaintext.vala',
	'widgets/views/gophertext.vala',
	'widgets/views/geminitext.vala',
	'widgets/views/geminiInput.vala',
	'widgets/views/loading.vala',
	'widgets/views/label.vala',
	'widgets/views/message.vala',
	'widgets/views/unknownUriScheme.vala',
	'widgets/views/uriErrorGeneric.vala',
	'widgets/views/errorGeneric.vala',
	'widgets/views/image.vala',
	'widgets/views/tlsSession.vala',
	'widgets/views/redirect.vala',
	'widgets/views/uriMergeTest.vala',
	
	dependencies: [
		dependency('gtk+-3.0'),
		dependency('gnutls'),
	],
	install: true
)
