executable(
	meson.project_name(),
	
	##_FILES_##
	'cache.vala', #AUTOUPDATE_FILE
	'downloader.vala', #AUTOUPDATE_FILE
	'dragonstoneApp.vala', #AUTOUPDATE_FILE
	'external.vala', #AUTOUPDATE_FILE
	'main.vala', #AUTOUPDATE_FILE
	'request.vala', #AUTOUPDATE_FILE
	'resource.vala', #AUTOUPDATE_FILE
	'resourceStore.vala', #AUTOUPDATE_FILE
	'session.vala', #AUTOUPDATE_FILE
	'settings.vala', #AUTOUPDATE_FILE
	'asm/argparse.vala', #AUTOUPDATE_FILE
	'asm/asm.vala', #AUTOUPDATE_FILE
	'asm/simpleAsmObject.vala', #AUTOUPDATE_FILE
	'asm/superRegistryConstructorFunctionProvider.vala', #AUTOUPDATE_FILE
	'asm_init/bookmarks.registry.vala', #AUTOUPDATE_FILE
	'asm_init/mimeguesser.registry.vala', #AUTOUPDATE_FILE
	'asm_init/session.registry.vala', #AUTOUPDATE_FILE
	'asm_init/settings.registry.vala', #AUTOUPDATE_FILE
	'asm_init/store.registry.vala', #AUTOUPDATE_FILE
	'asm_init/uri_autoprefix.registry.vala', #AUTOUPDATE_FILE
	'registries/bookmarkRegistry.vala', #AUTOUPDATE_FILE
	'registries/gopher.vala', #AUTOUPDATE_FILE
	'registries/mimeguesser.vala', #AUTOUPDATE_FILE
	'registries/sessionRegistry.vala', #AUTOUPDATE_FILE
	'registries/settingsRegistry.vala', #AUTOUPDATE_FILE
	'registries/storeRegistry.vala', #AUTOUPDATE_FILE
	'registries/superRegistry.vala', #AUTOUPDATE_FILE
	'registries/translation.vala', #AUTOUPDATE_FILE
	'registries/uriAutocorrect.vala', #AUTOUPDATE_FILE
	'registries/viewRegistry.vala', #AUTOUPDATE_FILE
	'sessions/default.vala', #AUTOUPDATE_FILE
	'sessions/dummy.vala', #AUTOUPDATE_FILE
	'sessions/tls.vala', #AUTOUPDATE_FILE
	'sessions/uncached.vala', #AUTOUPDATE_FILE
	'settings/bookmarkSettingsBridge.vala', #AUTOUPDATE_FILE
	'settings/fileSettingsProvider.vala', #AUTOUPDATE_FILE
	'settings/kvSettingsBridge.vala', #AUTOUPDATE_FILE
	'settings/ramSettingsProvider.vala', #AUTOUPDATE_FILE
	'startup/about.backend.vala', #AUTOUPDATE_FILE
	'startup/bookmarks.backend.vala', #AUTOUPDATE_FILE
	'startup/bookmarks.gtk.vala', #AUTOUPDATE_FILE
	'startup/bookmarks.settings.vala', #AUTOUPDATE_FILE
	'startup/cache.backend.vala', #AUTOUPDATE_FILE
	'startup/cache.gtk.vala', #AUTOUPDATE_FILE
	'startup/file.backend.vala', #AUTOUPDATE_FILE
	'startup/file.gtk.vala', #AUTOUPDATE_FILE
	'startup/finger.backend.vala', #AUTOUPDATE_FILE
	'startup/frontend.settings.vala', #AUTOUPDATE_FILE
	'startup/gemini.backend.vala', #AUTOUPDATE_FILE
	'startup/gemini.gtk.vala', #AUTOUPDATE_FILE
	'startup/geminiupload.backend.vala', #AUTOUPDATE_FILE
	'startup/geminiwrite.backend.vala', #AUTOUPDATE_FILE
	'startup/gopher.backend.vala', #AUTOUPDATE_FILE
	'startup/gopher.gtk.vala', #AUTOUPDATE_FILE
	'startup/gopherwrite.backend.vala', #AUTOUPDATE_FILE
	'startup/localization.english.vala', #AUTOUPDATE_FILE
	'startup/localization.vala', #AUTOUPDATE_FILE
	'startup/sessions.backend.vala', #AUTOUPDATE_FILE
	'startup/sessions.gtk.vala', #AUTOUPDATE_FILE
	'startup/settings.backend.vala', #AUTOUPDATE_FILE
	'startup/store_switch.vala', #AUTOUPDATE_FILE
	'startup/upload.gtk.vala', #AUTOUPDATE_FILE
	'startup/utiltest.backend.vala', #AUTOUPDATE_FILE
	'startup/utiltest.gtk.vala', #AUTOUPDATE_FILE
	'stores/about.vala', #AUTOUPDATE_FILE
	'stores/cache.vala', #AUTOUPDATE_FILE
	'stores/file.vala', #AUTOUPDATE_FILE
	'stores/finger.vala', #AUTOUPDATE_FILE
	'stores/gemini.vala', #AUTOUPDATE_FILE
	'stores/geminiupload.vala', #AUTOUPDATE_FILE
	'stores/geminiwrite.vala', #AUTOUPDATE_FILE
	'stores/gopher.vala', #AUTOUPDATE_FILE
	'stores/gopherwrite.vala', #AUTOUPDATE_FILE
	'stores/switch.vala', #AUTOUPDATE_FILE
	'stores/test.vala', #AUTOUPDATE_FILE
	'util/connectionHelper.vala', #AUTOUPDATE_FILE
	'util/defaultGtkLinkIconLoader.vala', #AUTOUPDATE_FILE
	'util/flaglist.vala', #AUTOUPDATE_FILE
	'util/intparser.vala', #AUTOUPDATE_FILE
	'util/kv.vala', #AUTOUPDATE_FILE
	'util/messageViewFactory.vala', #AUTOUPDATE_FILE
	'util/resourceFileHelper.vala', #AUTOUPDATE_FILE
	'util/settingsFetcher.vala', #AUTOUPDATE_FILE
	'util/stack.vala', #AUTOUPDATE_FILE
	'util/tlsCertificateGenerator.vala', #AUTOUPDATE_FILE
	'util/uri.vala', #AUTOUPDATE_FILE
	'widgets/bookmarkAdder.vala', #AUTOUPDATE_FILE
	'widgets/bookmarkEditor.vala', #AUTOUPDATE_FILE
	'widgets/cacheview.vala', #AUTOUPDATE_FILE
	'widgets/dialogViewBase.vala', #AUTOUPDATE_FILE
	'widgets/headerBar.vala', #AUTOUPDATE_FILE
	'widgets/hyperTextContent.vala', #AUTOUPDATE_FILE
	'widgets/linkButton.vala', #AUTOUPDATE_FILE
	'widgets/linkPopover.vala', #AUTOUPDATE_FILE
	'widgets/menuEntrys.vala', #AUTOUPDATE_FILE
	'widgets/requestArgumentDisplay.vala', #AUTOUPDATE_FILE
	'widgets/sessionChooser.vala', #AUTOUPDATE_FILE
	'widgets/subviewBase.vala', #AUTOUPDATE_FILE
	'widgets/tab.vala', #AUTOUPDATE_FILE
	'widgets/tabHead.vala', #AUTOUPDATE_FILE
	'widgets/textContent.vala', #AUTOUPDATE_FILE
	'widgets/textEntry.vala', #AUTOUPDATE_FILE
	'widgets/view.vala', #AUTOUPDATE_FILE
	'widgets/viewChooser.vala', #AUTOUPDATE_FILE
	'widgets/views/bookmarks.vala', #AUTOUPDATE_FILE
	'widgets/views/cache.vala', #AUTOUPDATE_FILE
	'widgets/views/directory.vala', #AUTOUPDATE_FILE
	'widgets/views/download.vala', #AUTOUPDATE_FILE
	'widgets/views/errorGeneric.vala', #AUTOUPDATE_FILE
	'widgets/views/geminiInput.vala', #AUTOUPDATE_FILE
	'widgets/views/geminitext.vala', #AUTOUPDATE_FILE
	'widgets/views/gophertext.vala', #AUTOUPDATE_FILE
	'widgets/views/image.vala', #AUTOUPDATE_FILE
	'widgets/views/label.vala', #AUTOUPDATE_FILE
	'widgets/views/loading.vala', #AUTOUPDATE_FILE
	'widgets/views/message.vala', #AUTOUPDATE_FILE
	'widgets/views/plaintext.vala', #AUTOUPDATE_FILE
	'widgets/views/redirect.vala', #AUTOUPDATE_FILE
	'widgets/views/tlsSession.vala', #AUTOUPDATE_FILE
	'widgets/views/unknownUriScheme.vala', #AUTOUPDATE_FILE
	'widgets/views/uploadFile.vala', #AUTOUPDATE_FILE
	'widgets/views/uploadText.vala', #AUTOUPDATE_FILE
	'widgets/views/uriErrorGeneric.vala', #AUTOUPDATE_FILE
	'widgets/views/uriMergeTest.vala', #AUTOUPDATE_FILE
	'widgets/window.vala', #AUTOUPDATE_FILE
	
	dependencies: [
		dependency('gtk+-3.0'),
		dependency('gnutls'),
	],
	install: true
)
