executable(
	meson.project_name(),
	
	##_FILES_##
	'downloader.vala', #AUTOUPDATE_FILE
	'external.vala', #AUTOUPDATE_FILE
	'main.vala', #AUTOUPDATE_FILE
	'request.vala', #AUTOUPDATE_FILE
	'resource.vala', #AUTOUPDATE_FILE
	'asm/argparse.vala', #AUTOUPDATE_FILE
	'asm/asm.vala', #AUTOUPDATE_FILE
	'asm/simple_asmObject.vala', #AUTOUPDATE_FILE
	'asm/super_registry_constructor_function_provider.vala', #AUTOUPDATE_FILE
	'asm_init/about.store.vala', #AUTOUPDATE_FILE
	'asm_init/bookmarks.registry.vala', #AUTOUPDATE_FILE
	'asm_init/file.store.vala', #AUTOUPDATE_FILE
	'asm_init/finger.store.vala', #AUTOUPDATE_FILE
	'asm_init/gemini.store.vala', #AUTOUPDATE_FILE
	'asm_init/gopher.store.vala', #AUTOUPDATE_FILE
	'asm_init/gopher.type.registry.vala', #AUTOUPDATE_FILE
	'asm_init/mimeguesser.registry.vala', #AUTOUPDATE_FILE
	'asm_init/session.registry.vala', #AUTOUPDATE_FILE
	'asm_init/settings.registry.vala', #AUTOUPDATE_FILE
	'asm_init/store.registry.vala', #AUTOUPDATE_FILE
	'asm_init/switch.store.vala', #AUTOUPDATE_FILE
	'asm_init/uri_autoprefix.registry.vala', #AUTOUPDATE_FILE
	'gtk_ui/application.vala', #AUTOUPDATE_FILE
	'gtk_ui/interface/theming/hyper_text_view_theme.vala', #AUTOUPDATE_FILE
	'gtk_ui/interface/theming/hyper_text_view_theme_provider.vala', #AUTOUPDATE_FILE
	'gtk_ui/interface/view.vala', #AUTOUPDATE_FILE
	'gtk_ui/json_integration/theming/hyper_text_view_theme.vala', #AUTOUPDATE_FILE
	'gtk_ui/json_integration/theming/text_tag_theme.vala', #AUTOUPDATE_FILE
	'gtk_ui/theming/default_hyper_text_view_theme_provider.vala', #AUTOUPDATE_FILE
	'gtk_ui/theming/hyper_text_view_theme.vala', #AUTOUPDATE_FILE
	'gtk_ui/theming/text_tag_theme.vala', #AUTOUPDATE_FILE
	'gtk_ui/util/default_gtk_link_icon_loader.vala', #AUTOUPDATE_FILE
	'gtk_ui/util/gtk_scroll_export.vala', #AUTOUPDATE_FILE
	'gtk_ui/util/message_view_factory.vala', #AUTOUPDATE_FILE
	'gtk_ui/view_registry.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/bookmarks.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/cache.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/directory.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/download.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/error_generic.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/geminiInput.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/hypertext.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/image.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/label.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/loading.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/message.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/plaintext.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/redirect.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/tls_session.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/unknown_uri_scheme.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/upload_file.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/upload_text.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/uri_error_generic.vala', #AUTOUPDATE_FILE
	'gtk_ui/views/uri_merge_test.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/bookmark_adder.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/bookmark_editor.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/cacheview.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/dialog_view_base.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/header_bar.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/hyper_text_content.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/inline_search.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/inline_search_post_b64_file_popover_easter_egg.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/link_button.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/link_popover.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/menu_entrys.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/request_argument_display.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/session_chooser.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/subview_base.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/tab.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/tab_head.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/text_content.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/text_entry.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/view_chooser.vala', #AUTOUPDATE_FILE
	'gtk_ui/widgets/window.vala', #AUTOUPDATE_FILE
	'interface/cache.i.vala', #AUTOUPDATE_FILE
	'interface/document/token_parser.i.vala', #AUTOUPDATE_FILE
	'interface/document/token_parser_factory.i.vala', #AUTOUPDATE_FILE
	'interface/document/token_renderer.i.vala', #AUTOUPDATE_FILE
	'interface/resource_store.i.vala', #AUTOUPDATE_FILE
	'interface/session.i.vala', #AUTOUPDATE_FILE
	'interface/settings/bridge.i.vala', #AUTOUPDATE_FILE
	'interface/settings/provider.i.vala', #AUTOUPDATE_FILE
	'interface/settings/rom.vala', #AUTOUPDATE_FILE
	'interface/settings/rom_provider.i.vala', #AUTOUPDATE_FILE
	'registries/bookmark_registry.vala', #AUTOUPDATE_FILE
	'registries/gopher_type_registry.vala', #AUTOUPDATE_FILE
	'registries/mimeguesser.vala', #AUTOUPDATE_FILE
	'registries/session_registry.vala', #AUTOUPDATE_FILE
	'registries/settings_registry.vala', #AUTOUPDATE_FILE
	'registries/store_registry.vala', #AUTOUPDATE_FILE
	'registries/super_registry.vala', #AUTOUPDATE_FILE
	'registries/translation.vala', #AUTOUPDATE_FILE
	'registries/uri_autocorrect.vala', #AUTOUPDATE_FILE
	'sessions/default.vala', #AUTOUPDATE_FILE
	'sessions/dummy.vala', #AUTOUPDATE_FILE
	'sessions/tls.vala', #AUTOUPDATE_FILE
	'sessions/uncached.vala', #AUTOUPDATE_FILE
	'settings/bookmark_settings_bridge.vala', #AUTOUPDATE_FILE
	'settings/file_settings_provider.vala', #AUTOUPDATE_FILE
	'settings/kv_settings_bridge.vala', #AUTOUPDATE_FILE
	'settings/ram_settings_provider.vala', #AUTOUPDATE_FILE
	'startup/about.backend.vala', #AUTOUPDATE_FILE
	'startup/bookmarks.backend.vala', #AUTOUPDATE_FILE
	'startup/bookmarks.gtk.vala', #AUTOUPDATE_FILE
	'startup/bookmarks.settings.vala', #AUTOUPDATE_FILE
	'startup/cache.backend.vala', #AUTOUPDATE_FILE
	'startup/cache.gtk.vala', #AUTOUPDATE_FILE
	'startup/file.backend.vala', #AUTOUPDATE_FILE
	'startup/file.gtk.vala', #AUTOUPDATE_FILE
	'startup/finger.backend.vala', #AUTOUPDATE_FILE
	'startup/frontend.settings.vala', #AUTOUPDATE_FILE
	'startup/gemini.backend.vala', #AUTOUPDATE_FILE
	'startup/gemini.gtk.vala', #AUTOUPDATE_FILE
	'startup/geminiupload.backend.vala', #AUTOUPDATE_FILE
	'startup/geminiwrite.backend.vala', #AUTOUPDATE_FILE
	'startup/gopher.backend.vala', #AUTOUPDATE_FILE
	'startup/gopherwrite.backend.vala', #AUTOUPDATE_FILE
	'startup/hypertext.gtk.vala', #AUTOUPDATE_FILE
	'startup/localization.english.vala', #AUTOUPDATE_FILE
	'startup/localization.vala', #AUTOUPDATE_FILE
	'startup/sessions.backend.vala', #AUTOUPDATE_FILE
	'startup/sessions.gtk.vala', #AUTOUPDATE_FILE
	'startup/settings.backend.vala', #AUTOUPDATE_FILE
	'startup/store_switch.vala', #AUTOUPDATE_FILE
	'startup/upload.gtk.vala', #AUTOUPDATE_FILE
	'startup/utiltest.backend.vala', #AUTOUPDATE_FILE
	'startup/utiltest.gtk.vala', #AUTOUPDATE_FILE
	'stores/about.vala', #AUTOUPDATE_FILE
	'stores/cache.vala', #AUTOUPDATE_FILE
	'stores/file.vala', #AUTOUPDATE_FILE
	'stores/finger.vala', #AUTOUPDATE_FILE
	'stores/gemini.vala', #AUTOUPDATE_FILE
	'stores/geminiupload.vala', #AUTOUPDATE_FILE
	'stores/geminiwrite.vala', #AUTOUPDATE_FILE
	'stores/gopher.vala', #AUTOUPDATE_FILE
	'stores/gopherwrite.vala', #AUTOUPDATE_FILE
	'stores/switch.vala', #AUTOUPDATE_FILE
	'stores/test.vala', #AUTOUPDATE_FILE
	'ui/document/default_token_parser_factory.vala', #AUTOUPDATE_FILE
	'ui/document/token.vala', #AUTOUPDATE_FILE
	'ui/document/token_parser/gemini.vala', #AUTOUPDATE_FILE
	'ui/document/token_parser/gopher.vala', #AUTOUPDATE_FILE
	'ui/document/token_type.vala', #AUTOUPDATE_FILE
	'ui/tab.vala', #AUTOUPDATE_FILE
	'ui/tab_display_state.vala', #AUTOUPDATE_FILE
	'util/connection_helper.vala', #AUTOUPDATE_FILE
	'util/flaglist.vala', #AUTOUPDATE_FILE
	'util/intparser.vala', #AUTOUPDATE_FILE
	'util/kv.vala', #AUTOUPDATE_FILE
	'util/resource_file_helper.vala', #AUTOUPDATE_FILE
	'util/settings_fetcher.vala', #AUTOUPDATE_FILE
	'util/stack.vala', #AUTOUPDATE_FILE
	'util/tls_certificate_generator.vala', #AUTOUPDATE_FILE
	'util/uri.vala', #AUTOUPDATE_FILE
	
	dependencies: [
		dependency('gtk+-3.0'),
		dependency('json-glib-1.0'),
		dependency('gnutls'),
	],
	install: true
)
